# artifacts/api-server/src/routes/index.ts
@@ -20,6 +20,7 @@ import paymentsRouter from "./payments";
 import complianceRouter from "./compliance";
 import exportsRouter from "./exports";
 import loansRouter from "./loans";
+import loanCatalogRouter from "./loan-catalog";
 import salesRouter from "./sales";
 import buyingStationsRouter from "./buying-stations";
 import usersRouter from "./users";
@@ -55,6 +56,7 @@ router.use(paymentsRouter);
 router.use(complianceRouter);
 router.use(exportsRouter);
 router.use(loansRouter);
+router.use(loanCatalogRouter);
 router.use(salesRouter);
 router.use(buyingStationsRouter);
 router.use(usersRouter);
